# gazebo-cloud-sim

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
config/: gz_gui.config
docs/: 00-index.md  01-infrastructure.md  02-ros2-package.md  03-scripts.md  04-orchestrator.md
orchestrator/: gz-sim  health-monitor  install.sh  requirements.txt
orchestrator/gz_sim/: config.py  manager.py  models.py
scripts/: capacity-test.sh  run.sh  setup-host.sh  stop.sh  verify.sh
src/tb3_sim/: CMakeLists.txt  package.xml
src/tb3_sim/launch/: tb3_nav2.launch.py
src/tb3_sim/maps/: tb3_world.pgm  tb3_world.yaml
src/tb3_sim/params/: nav2_params.yaml
src/tb3_sim/tb3_sim/: random_goal_sender.py
src/tb3_sim/urdf/: turtlebot3_burger.urdf
src/tb3_sim/worlds/: tb3_world.sdf
worlds/: demo.sdf
